# CodeStars-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
Engine/: CMakeLists.txt  CodeStarsEngine.h
Engine/cmake/: NDS.cmake
Engine/cmake/Platform/: NintendoDS.cmake
Engine/cmake/Platform/BlocksDS/: BlocksDS.cmake  WonderfulToolchain.cmake  arm7.cmake  arm9.cmake  ndstool.cmake
Engine/core/: CMakeLists.txt  includes.h
Engine/core/graphics/: CMakeLists.txt  Graphics.c  Graphics.h  Mesh.h  Shader.h  includes.h
Engine/core/maths/: CMakeLists.txt  includes.h  mat.c  mat.h  maths.h  quat.h  vec.h
Engine/core/memory/: CMakeLists.txt  includes.h  memory_chunk.h  pool_allocator.c  pool_allocator.h
Engine/core/utils/: defines.h
Engine/libs/: CMakeLists.txt
Engine/platform-specifics/: CMakeLists.txt  includes.h
Engine/platform-specifics/graphics/: CMakeLists.txt  includes.h
Engine/platform-specifics/graphics/GL/: CMakeLists.txt  GLFWFunctions.c  GLFWFunctions.h  GLGraphics.c  GLGraphics.h  GLMesh.c  GLMesh.h  GLShader.c  GLShader.h  GLShaderConverter.cpp  GLShaderConverter.h  SDLFunctions.c  SDLFunctions.h
Engine/shaders/: fragment.frag  fragment.glsl  vertex.glsl  vertex.vert
Game/: CMakeLists.txt  main.c
Game/Engine/: CMakeLists.txt
Game/Engine/core/: CMakeLists.txt
Game/Engine/core/graphics/: CMakeLists.txt  Graphics.c  Graphics.h  Mesh.c  Mesh.h  Shader.h
Game/Engine/platform-specifics/: CMakeLists.txt
Game/Engine/platform-specifics/graphics/: CMakeLists.txt
Game/Engine/platform-specifics/graphics/GL/: CMakeLists.txt  GLFWFunctions.c  GLFWFunctions.h  GLGraphics.c  GLGraphics.h  GLMesh.c  GLMesh.h  GLShader.c  GLShader.h
Game/Engine/platform-specifics/graphics/GL/glad/include/glad/: glad.h
Game/Engine/platform-specifics/graphics/GL/glad/src/: glad.c
Game/src/: main.c
Shaders/: vertex.glsl
