cmake_minimum_required(VERSION 3.13)
project(CodeStars-Engine)
file(GLOB platforms "${CMAKE_CURRENT_SOURCE_DIR}/platforms/*")
message(${platforms})
foreach(platform ${platforms})
    include(${platform})
endforeach(platform ${platforms})
add_library(CodeStars-Engine INTERFACE)
add_subdirectory(core)
add_subdirectory(platform-specifics)