cmake_minimum_required(VERSION 3.13)
project(Game)
add_executable(Game src/main.c)
SET(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -Werror=incompatible-pointer-types")
add_definitions(${GCC_COVERAGE_COMPILE_FLAGS})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Engine)
add_subdirectory(Engine)
target_include_directories(Game PRIVATE include Engine)
set_property(TARGET Game PROPERTY C_STANDARD 99)
target_link_libraries(Game CodeStars-Engine)