cmake_minimum_required(VERSION 3.13)
project(Game LANGUAGES C)
if (CMAKE_SYSTEM_NAME STREQUAL "NintendoDS")
add_arm9_executable(Game src/main.c)
create_nds("Game" Game)
else()
add_executable(Game src/main.c)
install(TARGETS Game)
install(FILES $<TARGET_RUNTIME_DLLS:Game> TYPE BIN)
install(DIRECTORY "Engine/shaders" TYPE BIN)
endif()
set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -Wpedantic -Werror")
set_property(TARGET Game PROPERTY C_STANDARD 99)
set_property(TARGET Game PROPERTY CXX_STANDARD 14)
add_definitions(${GCC_COVERAGE_COMPILE_FLAGS})
target_link_libraries(Game CodeStars-Engine)
