cmake_minimum_required(VERSION 3.13)
if (CMAKE_SYSTEM_NAME STREQUAL "NintendoDS")
add_arm9_executable(${PROJECT_NAME} src/main.c)
create_nds(${PROJECT_NAME} ${PROJECT_NAME})
else()
add_executable(${PROJECT_NAME} src/main.c)
install(TARGETS ${PROJECT_NAME})
install(FILES $<TARGET_RUNTIME_DLLS:${PROJECT_NAME}> TYPE BIN)
install(DIRECTORY "${PROJECT_SOURCE_DIR}/Engine/shaders" TYPE BIN)
endif()
set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 99)
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 14)
set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -Wpedantic -Werror")
add_definitions(${GCC_COVERAGE_COMPILE_FLAGS})
target_link_libraries(${PROJECT_NAME} CodeStars-Engine)
target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/Engine)